--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Lobster&display=swap");
+
 *,
 *::before,
 *::after {
@@ -11,6 +13,7 @@
 body {
   line-height: 1.5;
   font-family: Arial, Helvetica, sans-serif;
+  color: #fffaf3;
 }
 
 img {
@@ -20,16 +23,64 @@ img {
 
 button {
   font: inherit;
+  color: inherit;
+}
+
+.layout {
+  background-color: #fef3e2;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.game {
+  background-color: #fa4032;
+  padding: 0 100px;
+  border-radius: 20px;
+}
+
+.game__title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  font-size: 50px;
+  font-family: "Lobster", sans-serif;
 }
 
 .game__canvas {
   box-sizing: content-box;
-  border: 3px solid red;
+  background-color: white;
+  /* border: 3px solid red; */
   display: flex;
   flex-wrap: wrap;
   width: 480px;
 }
 
+.game__buttons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 18px;
+  font-weight: 700;
+}
+
+.game__button {
+  background-color: #fa812f;
+  padding: 10px;
+  min-width: 140px;
+  border-radius: 10px;
+  border: none;
+}
+
+.game__button:hover {
+  box-shadow: 0px 0px 3px 2px rgba(250, 177, 47, 1);
+  transform: scale(1.02);
+}
+
 .game__button_active {
-  color: red;
+  box-shadow: 0px 0px 3px 2px rgba(250, 177, 47, 1);
 }
